# OptionMM

./: .gitignore  README.md  analysis_notebook.ipynb  config.py  pyproject.toml
core/: implied_vol_calculator.py  option_price_predictor.py
scripts/: analyze_vol_fit.py  predict_iv.py  preprocess_data.py  run_backtest.py
sim/: __init__.py  backtester.py  hedger.py  metrics.py  strategy.py  trade_simulator.py
utils/: dataloader.py  greeks.py  pricing.py
